--- a/MauiAppHotel/Views/Sobre.xaml
+++ b/MauiAppHotel/Views/Sobre.xaml
@@ -9,7 +9,7 @@
                FontSize="29"
                HorizontalOptions="Center"
                FontAttributes="Bold"
-               BackgroundColor="blue"
+               BackgroundColor="Azure"
                TextColor="OrangeRed"/>
 
         <Label Text="Desenvolvido por Luiz Henrique Balbo"
