--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -1,11 +1,15 @@
-<?xml version="1.0" encoding="utf-8" ?>
+    <?xml version="1.0" encoding="utf-8" ?>
     <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
+             Title="Hospedagem"
              NavigationPage.HasNavigationBar="False"
              BackgroundColor="{StaticResource Gray100}">
 
-    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+    <VerticalStackLayout VerticalOptions="CenterAndExpand"
+                             Padding="10"
+                             Spacing="10">
 
 
         <Label Text="Suíte Super Luxo"
@@ -14,7 +18,7 @@
                FontSize="50"
                HorizontalTextAlignment="Center"/>
 
-        <Frame Margin="10">
+        <Frame Padding="10" Margin="10">
             <StackLayout  Orientation="Horizontal" >
                 <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                     <Label Text="Adultos: " />
@@ -30,7 +34,7 @@
             </StackLayout>
         </Frame>
 
-        <Frame Margin="10">
+        <Frame Margin="10" Padding="10">
             <Grid ColumnDefinitions="*, *, *"
                   RowDefinitions="Auto, Auto">
                 <Label Grid.Row="0" Grid.Column="0" Text="Check-in:" />
@@ -39,11 +43,11 @@
 
                 <Label Grid.Row="1" Grid.Column="0" Text="03/11/2025" />
                 <Label Grid.Row="1" Grid.Column="1" Text="04/11/2025" />
-                <Label Grid.Row="1" Grid.Column="2" Text="1" />
+                <Label Grid.Row="1" Grid.Column="2" Text="1" TextColor="OrangeRed"/>
             </Grid>
         </Frame>
 
-        <Frame Margin="10">
+        <Frame Margin="10" Padding="10">
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                 <Label Text="Valor Total: " />
                 <Label Text="  R$ 750,00" 
@@ -52,8 +56,14 @@
         </Frame>
 
         <Button Text="Voltar" Clicked="Button_Clicked"
-                BackgroundColor="PaleVioletRed"
-                HorizontalOptions="Center"/>
+                    BackgroundColor="PaleVioletRed"
+                    TextColor="White"
+                    CornerRadius="20"
+                    FontSize="14"
+                    FontAttributes="Bold"
+                    HeightRequest="30"
+                    HorizontalOptions="CenterAndExpand"
+              />
 
     </VerticalStackLayout>
 </ContentPage>
