--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -1,4 +1,4 @@
-    <?xml version="1.0" encoding="utf-8" ?>
+   
     <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
@@ -12,7 +12,7 @@
                              Spacing="10">
 
 
-        <Label Text="Suíte Super Luxo"
+        <Label Text="{Binding QuartoSelecionado.Descricao}"
                TextColor="PaleVioletRed"
                FontFamily="Kalam"
                FontSize="50"
@@ -22,14 +22,16 @@
             <StackLayout  Orientation="Horizontal" >
                 <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                     <Label Text="Adultos: " />
-                    <Label Text=" 2" 
-                           TextColor="OrangeRed" />
+                    <Label Text="{Binding QntAdultos}"
+                           TextColor="OrangeRed" 
+                           Margin="5,0,0,0"/>
                 </HorizontalStackLayout>
 
                 <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                     <Label Text="Crianças: " />
-                    <Label Text=" 1" 
-                           TextColor="OrangeRed" />
+                    <Label Text="{Binding QntCriancas}" 
+                           TextColor="OrangeRed"
+                           Margin="5,0,0,0"/>
                 </HorizontalStackLayout>
             </StackLayout>
         </Frame>
@@ -41,17 +43,25 @@
                 <Label Grid.Row="0" Grid.Column="1" Text="Check-out:" />
                 <Label Grid.Row="0" Grid.Column="2" Text="Estadia:" />
 
-                <Label Grid.Row="1" Grid.Column="0" Text="03/11/2025" />
-                <Label Grid.Row="1" Grid.Column="1" Text="04/11/2025" />
-                <Label Grid.Row="1" Grid.Column="2" Text="1" TextColor="OrangeRed"/>
+                <Label Grid.Row="1" Grid.Column="0"
+                       Text="{Binding DataCheckIn, StringFormat='{}{0:dd/MM/yyyy}'}"
+                       TextColor="OrangeRed"/>
+                <Label Grid.Row="1" Grid.Column="1" 
+                       Text="{Binding DataCheckOut, StringFormat='{}{0:dd/MM/yyyy}'}"
+                       TextColor="OrangeRed"/>
+                <Label Grid.Row="1" Grid.Column="2"
+                       Text="{Binding Estadia}"
+                       TextColor="OrangeRed"
+                       Margin="5,0,0,0"/>
             </Grid>
         </Frame>
 
         <Frame Margin="10" Padding="10">
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                 <Label Text="Valor Total: " />
-                <Label Text="  R$ 750,00" 
-                       TextColor="OrangeRed"/>
+                <Label Text="{Binding ValorTotal, StringFormat='{}{0:c}'}" 
+                       TextColor="OrangeRed"
+                       Margin="5,0,0,0"/>
             </HorizontalStackLayout>
         </Frame>
 
